--- a/views/bicicletas/index.pug
+++ b/views/bicicletas/index.pug
@@ -15,14 +15,14 @@ block content
       each bici in bicis
         tr
           td(scope='row')
-            = bici.id
+            = bici.code
           td= bici.color
           td= bici.modelo
           td= bici.ubicacion
           td
             a(href='bicicletas/' + bici.id + '/update') Editar
           td
-            form.inline(method='post' action='bicicletas/'+ bici.id + '/delete')
-              input(type='hidden' name='id' value=bici.id)
-              button.btn.btn-danger(type='submit_param' name='submit_value' class='btn')
+            form.inline(method='post' action='bicicletas/'+ bici.code + '/delete')
+              input(type='hidden' name='code' value=bici.code)
+              button.btn.btn-danger(type='submit' name='submit_param' class='btn')
                 = 'Eliminar'
