--- a/views/bicicletas/index.pug
+++ b/views/bicicletas/index.pug
@@ -1,28 +1,31 @@
 extends ../layout
 
 block content
-  a(href='/bicicletas/create') Nueva Bicicleta
-  table.table
-    thead.thead-dark
-      tr
-       th(scope='col') #
-       th(scope='col') Color
-       th(scope='col') Modelo
-       th(scope='col') Ubicacion
-       th(scope='col')
-       th(scope='col')
-    tbody
-      each bici in bicis
+   div.container
+    a(href="/bicicletas/create") Nueva Bicicleta
+
+    table.table
+      thead
         tr
-          td(scope='row')
-            = bici.code
-          td= bici.color
-          td= bici.modelo
-          td= bici.ubicacion
-          td
-            a(href='bicicletas/' + bici.id + '/update') Editar
-          td
-            form.inline(method='post' action='bicicletas/'+ bici.code + '/delete')
-              input(type='hidden' name='code' value=bici.code)
-              button.btn.btn-danger(type='submit' name='submit_param' class='btn')
-                = 'Eliminar'
+          th(scope='col') #
+          th(scope='col') Color
+          th(scope='col') Modelo
+          th(scope='col') Ubicacion
+          th(scope='col') 
+          th(scope='col') 
+      tbody
+        each bici in bicis
+          tr
+            th(scope='row')
+              = bici.code
+            td= bici.color
+            td= bici.modelo
+            td= bici.ubicacion
+            td
+              a(href="bicicletas/" + bici.id +"/update" class="btn btn-primary") editar
+            td
+              form.inline(method="post" action="bicicletas/"+ bici.id + "/delete")
+                input(type="hidden" name="id" value=bici.id)
+                button.link-button(type="submit" name="submit_param" value="submit_value" class="btn btn-danger") 
+                  = "Eliminar"
+                
