puesta en producion

--- a/views/bicicletas/index.pug
+++ b/views/bicicletas/index.pug
@@ -1,10 +1,10 @@
 extends ../layout
 
 block content
-   div.container
-    a(href="/bicicletas/create") Nueva Bicicleta
+   div.container.mt-5
+    a.btn.btn-success(href="/bicicletas/create") Nueva Bicicleta
 
-    table.table
+    table.table.mt-5
       thead
         tr
           th(scope='col') #
