--- a/views/bicicletas/create.pug
+++ b/views/bicicletas/create.pug
@@ -1,7 +1,8 @@
 extends ../layout
 
 block content
- a(href='/bicicletas') Volver
+ div.container.mt-5
+  a.btn.btn-success(href='/bicicletas') Volver
 
  br
  br
