--- a/views/usuarios/create.pug
+++ b/views/usuarios/create.pug
@@ -1,7 +1,8 @@
 extends ../layout
 
 block content
-  a(href='/usuarios') Volver
+ div.container.mt-5
+  a.btn-success.btn-sm(href='/usuarios' role='button') Volver
 
   br
   br
