--- a/views/usuarios/index.pug
+++ b/views/usuarios/index.pug
@@ -1,7 +1,8 @@
 extends ../layout
 
 block content
-  a.btn.btn-success(href='/usuarios/create') Nuevo Usuario
+ div.container.mt-5
+  a.btn.btn-info(href='/usuarios/create' role="button") Nuevo Usuario
 
   br
   br
