--- a/views/usuarios/update.pug
+++ b/views/usuarios/update.pug
@@ -1,7 +1,8 @@
 extends ../layout
 
 block content
-  a(href='/usuarios') Volver
+ div.container.mt-5
+  a.btn.btn-success(href='/usuarios') Volver
 
   br
   br
