--- a/views/bicicletas/update.pug
+++ b/views/bicicletas/update.pug
@@ -13,7 +13,7 @@ block content
    .container
     .row
      .col-6.mx-auto
-      form(action=`/bicicleta/update/${bici.id}` method='post')
+      form(action=`/bicicletas/${bici.id}/update` method='POST')
       .input-group.mb-3
         label.col-sm-2.col-form-label(for='code') ID:
         input#id.form-control(type='text' name='code' value=bici.id disabled)
