--- a/views/session/login.pug
+++ b/views/session/login.pug
@@ -27,5 +27,7 @@ body#LoginForm
             a(href='/forgotPassword') Olvidé mi password
            
           a(href='/auth/google') Log In con Google
+          br
+          a(href='/auth/facebook')  Log In con Facebook
 
           button.btn.btn-primary(type='submit') Login
