--- a/views/bicicletas/create.pug
+++ b/views/bicicletas/create.pug
@@ -1,14 +1,11 @@
 extends ../layout
 
 block content
- div.container.mt-5
-  a.btn.btn-success(href='/bicicletas') Volver
-
- br
- br
- br
-
- h1.text-center Nueva Bicicleta
+ div.container
+  a.btn.btn-light(href='/bicicletas') Volver
+ 
+ div.container.mt-5 
+  h1.text-center Nueva Bicicleta
 
  br
  br
