--- a/views/index.pug
+++ b/views/index.pug
@@ -17,6 +17,8 @@ block content
             a.nav-link(href='#projects') Bicicletas
           li.nav-item
             a.nav-link(href='#signup') Contact
+          li.nav-item
+            a.nav-link(href='/login') Login  
   // Masthead
   header.masthead
     .container.px-4.px-lg-5.d-flex.h-100.align-items-center.justify-content-center
@@ -30,10 +32,10 @@ block content
     .container.px-4.px-lg-5
       .row.gx-4.gx-lg-5.justify-content-center
         .col-lg-8
-          h2.text-white.mb-4 Built with Bootstrap 5
+          h2.text-white.mb-4 Built with NodeJS
           p.text-white-50
-            | Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-            a(href='https://startbootstrap.com/theme/grayscale/') the preview page.
+            | Desarrollo del lado servidor: NodeJS, Express y MongoDB.
+            a(href='#') the preview page.
             |                             The theme is open source, and you can use it for any purpose, personal or commercial.
       img.img-fluid(src='assets/img/ipad.png' alt='...')
   // Projects
@@ -47,7 +49,7 @@ block content
           //- img.img-fluid.mb-3.mb-lg-0(src='assets/img/bg-masthead.jpg' alt='...')
         .col-xl-4.col-lg-5
           .featured-text.text-center.text-lg-left
-            h4 Shoreline
+            a.h1(href='/bicicletas') Bicicletas Disponibles
             p.text-black-50.mb-0
               | Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!
       // Project One Row
