--- a/views/usuarios/create.pug
+++ b/views/usuarios/create.pug
@@ -1,15 +1,11 @@
 extends ../layout
 
 block content
- div.container.mt-5
-  a.btn-success.btn-sm(href='/usuarios' role='button') Volver
+ div.container
+  a.btn.btn-light(href='/usuarios') Volver
 
-  br
-  br
-  br
-
-  h1  Nuevo Usuario
-
+  div.container.mt-5 
+   h1.text-center Nuevo Usuario
   br
   br
 
