--- a/views/usuarios/update.pug
+++ b/views/usuarios/update.pug
@@ -1,8 +1,8 @@
 extends ../layout
 
 block content
- div.container.mt-5
-  a.btn.btn-success(href='/usuarios') Volver
+ div.container
+  a.btn.btn-light(href='/usuarios') Volver
 
   br
   br
